--- a/Test/Forecast2 copy.ipynb
+++ b/Test/Forecast2 copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,14 @@
     "\n",
     "\n",
     "df = pd.read_excel('/Users/martinwolf/Python/Superdepot Reporting/Data/df.xlsx')\n",
-    "df['Pick Datum'] = pd.to_datetime(df['B']).dt.date\n"
+    "df['Pick Datum'] = pd.to_datetime(df['B']).dt.date\n",
+    "#add 5 days to the end of the dataset\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/0j/czkb_cmx12d_xchj2bf8bptc0000gn/T/ipykernel_6175/1682030100.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  bitcoin = bitcoin.append(pd.DataFrame({'Picks Gesamt': [0,0,0,0,0]}, index=pd.date_range(start=bitcoin.index[-1], periods=5, freq='D')))\n"
+     ]
+    }
+   ],
    "source": [
     "dfPicks = DatenPickTagaufbereiten(df)\n",
     "\n",
@@ -61,79 +72,42 @@
     "test_days = 20\n",
     "\n",
     "bitcoin = df.filter(['Picks Gesamt'])\n",
+    "#add next 5 workdays to the end of the dataset\n",
+    "bitcoin = bitcoin.append(pd.DataFrame({'Picks Gesamt': [0,0,0,0,0]}, index=pd.date_range(start=bitcoin.index[-1], periods=5, freq='D')))\n",
+    "#bitcoin = bitcoin.append(pd.DataFrame({'Picks Gesamt': [0,0,0,0,0]}, index=[bitcoin.index[-1] + pd.DateOffset(days=x) for x in range(1,6)]))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-04-04\n",
-      "1344.0\n",
-      "2022-04-11\n",
-      "1084.0\n",
-      "2022-04-25\n",
-      "1060.0\n",
-      "2022-05-02\n",
-      "2259.876811594203\n",
-      "2022-05-09\n",
-      "2467.5\n",
-      "2022-05-16\n",
-      "2262.0\n",
-      "2022-05-23\n",
-      "2798.9166666666665\n",
-      "2022-05-30\n",
-      "1860.2\n",
-      "2022-06-13\n",
-      "2428.0\n",
-      "2022-06-20\n",
-      "2042.0\n",
-      "2022-06-27\n",
-      "1776.0\n",
-      "2022-07-04\n",
-      "2395.086956521739\n",
-      "2022-07-11\n",
-      "2139.0\n",
-      "2022-07-18\n",
-      "2222.0\n",
-      "2022-07-25\n",
-      "2216.0\n",
-      "2022-08-01\n",
-      "1959.0\n",
-      "2022-08-08\n",
-      "2142.3\n",
-      "2022-08-15\n",
-      "1999.0\n",
-      "2022-08-22\n",
-      "2022.0\n",
-      "2022-08-29\n",
-      "1882.0\n",
-      "2022-09-05\n",
-      "1821.0\n",
-      "2022-09-12\n",
-      "1977.0\n",
-      "2022-09-19\n",
-      "2193.0\n",
-      "2022-09-26\n",
-      "2544.0\n",
-      "2022-10-10\n",
-      "2838.0\n",
-      "2022-10-17\n",
-      "1866.0\n",
-      "2022-10-24\n",
-      "1581.0\n",
-      "2022-10-31\n",
-      "1935.2208333333333\n"
+     "ename": "KeyError",
+     "evalue": "'my_dates'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:3800\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3799\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3800\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3801\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'my_dates'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [71], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bitcoin\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m=\u001b[39m \u001b[43mbitcoin\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmy_dates\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mdt\u001b[38;5;241m.\u001b[39mday_name()\n\u001b[1;32m      2\u001b[0m bitcoin\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/frame.py:3805\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3803\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3804\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3805\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3806\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3807\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3800\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3801\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3804\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3806\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'my_dates'"
      ]
     }
    ],
    "source": [
-    "\n"
+    "bitcoin.index = bitcoin['my_dates'].dt.day_name()\n",
+    "bitcoin"
    ]
   }
  ],
