--- a/Test/Forecast1.ipynb
+++ b/Test/Forecast1.ipynb
@@ -6,45 +6,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "C\n",
-       "2022-09-01     4755.674\n",
-       "2022-09-02     7557.326\n",
-       "2022-09-05     5830.540\n",
-       "2022-09-06     7754.340\n",
-       "2022-09-07     5288.236\n",
-       "2022-09-08     6169.265\n",
-       "2022-09-09     5085.163\n",
-       "2022-09-12     5002.763\n",
-       "2022-09-13    11015.444\n",
-       "2022-09-14     8601.336\n",
-       "2022-09-15    12256.388\n",
-       "2022-09-16     7468.973\n",
-       "2022-09-19    12009.338\n",
-       "2022-09-20    12174.534\n",
-       "2022-09-21    11911.434\n",
-       "2022-09-22    18578.368\n",
-       "2022-09-23    10277.154\n",
-       "2022-09-26     9156.350\n",
-       "2022-09-27    19724.701\n",
-       "2022-09-28     8409.884\n",
-       "2022-09-29    15696.923\n",
-       "2022-09-30    12676.688\n",
-       "2022-10-04    17294.700\n",
-       "2022-10-05     9392.532\n",
-       "2022-10-06    14188.465\n",
-       "2022-10-07     6375.559\n",
-       "2022-10-10     7071.904\n",
-       "2022-10-11    16374.668\n",
-       "2022-10-12     8527.207\n",
-       "2022-10-13     9366.473\n",
-       "Name: O, dtype: float64"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
     }
    ],
    "source": [
@@ -76,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1079,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
