--- a/Test/Untitled-1.ipynb
+++ b/Test/Untitled-1.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#pd.concat([df1[~df1.index.isin(df2.index)], df2])\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      5\u001b[0m df1 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_excel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mteil1.xlsx\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "#pd.concat([df1[~df1.index.isin(df2.index)], df2])\n",
     "import pandas as pd\n",
@@ -18,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -66,20 +78,20 @@
     }
    ],
    "source": [
-    "import pyodbc as db\n",
-    "server = 'batsql-pd-ne-cmes-dev-10.database.windows.net.database.windows.net'\n",
-    "database = 'batsdb-pd-ne-dev-reporting_SuperDepot'\n",
-    "username = 'batedp-cmes-dev-reportinguser'\n",
-    "password = '{b2.5v^H!IKjetuXMVNvW}'   \n",
-    "driver= '{ODBC Driver 17 for SQL Server}'\n",
+    "# import pyodbc as db\n",
+    "# server = 'batsql-pd-ne-cmes-dev-10.database.windows.net.database.windows.net'\n",
+    "# database = 'batsdb-pd-ne-dev-reporting_SuperDepot'\n",
+    "# username = 'batedp-cmes-dev-reportinguser'\n",
+    "# password = '{b2.5v^H!IKjetuXMVNvW}'   \n",
+    "# driver= '{ODBC Driver 17 for SQL Server}'\n",
     "\n",
-    "with db.connect('DRIVER='+driver+';SERVER=tcp:'+server+';PORT=1433;DATABASE='+database+';UID='+username+';PWD='+ password) as conn:\n",
-    "    with conn.cursor() as cursor:\n",
-    "        cursor.execute(\"SELECT TOP 3 name, collation_name FROM sys.databases\")\n",
-    "        row = cursor.fetchone()\n",
-    "        while row:\n",
-    "            print (str(row[0]) + \" \" + str(row[1]))\n",
-    "            row = cursor.fetchone()"
+    "# with db.connect('DRIVER='+driver+';SERVER=tcp:'+server+';PORT=1433;DATABASE='+database+';UID='+username+';PWD='+ password) as conn:\n",
+    "#     with conn.cursor() as cursor:\n",
+    "#         cursor.execute(\"SELECT TOP 3 name, collation_name FROM sys.databases\")\n",
+    "#         row = cursor.fetchone()\n",
+    "#         while row:\n",
+    "#             print (str(row[0]) + \" \" + str(row[1]))\n",
+    "#             row = cursor.fetchone()"
    ]
   },
   {
