--- a/Test/Untitled-1.ipynb
+++ b/Test/Untitled-1.ipynb
@@ -4,37 +4,25 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#pd.concat([df1[~df1.index.isin(df2.index)], df2])\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      5\u001b[0m df1 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_excel(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mteil1.xlsx\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#pd.concat([df1[~df1.index.isin(df2.index)], df2])\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "# #pd.concat([df1[~df1.index.isin(df2.index)], df2])\n",
+    "# import pandas as pd\n",
+    "# import numpy as np\n",
     "\n",
-    "df1 = pd.read_excel('teil1.xlsx')\n",
-    "df2 = pd.read_excel('teil2.xlsx')\n",
-    "df1.set_index('Transfer Order Number', inplace=True)\n",
-    "df2.set_index('Transfer Order Number', inplace=True)\n"
+    "# df1 = pd.read_excel('teil1.xlsx')\n",
+    "# df2 = pd.read_excel('teil2.xlsx')\n",
+    "# df1.set_index('Transfer Order Number', inplace=True)\n",
+    "# df2.set_index('Transfer Order Number', inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.concat([df1[~df1.index.isin(df2.index)], df2])\n"
+    "# df1 = pd.concat([df1[~df1.index.isin(df2.index)], df2])\n"
    ]
   },
   {
@@ -64,40 +52,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "dlopen(/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pyodbc.cpython-310-darwin.so, 0x0002): symbol not found in flat namespace '_SQLAllocHandle'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyodbc\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdb\u001b[39;00m\n\u001b[1;32m      2\u001b[0m server \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatsql-pd-ne-cmes-dev-10.database.windows.net.database.windows.net\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      3\u001b[0m database \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatsdb-pd-ne-dev-reporting_SuperDepot\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "\u001b[0;31mImportError\u001b[0m: dlopen(/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pyodbc.cpython-310-darwin.so, 0x0002): symbol not found in flat namespace '_SQLAllocHandle'"
-     ]
-    }
-   ],
-   "source": [
-    "# import pyodbc as db\n",
-    "# server = 'batsql-pd-ne-cmes-dev-10.database.windows.net.database.windows.net'\n",
-    "# database = 'batsdb-pd-ne-dev-reporting_SuperDepot'\n",
-    "# username = 'batedp-cmes-dev-reportinguser'\n",
-    "# password = '{b2.5v^H!IKjetuXMVNvW}'   \n",
-    "# driver= '{ODBC Driver 17 for SQL Server}'\n",
-    "\n",
-    "# with db.connect('DRIVER='+driver+';SERVER=tcp:'+server+';PORT=1433;DATABASE='+database+';UID='+username+';PWD='+ password) as conn:\n",
-    "#     with conn.cursor() as cursor:\n",
-    "#         cursor.execute(\"SELECT TOP 3 name, collation_name FROM sys.databases\")\n",
-    "#         row = cursor.fetchone()\n",
-    "#         while row:\n",
-    "#             print (str(row[0]) + \" \" + str(row[1]))\n",
-    "#             row = cursor.fetchone()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -118,12 +72,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "7e1998ff7f8aa20ada591c520b972326324e5ea05489af9e422744c7c09f6dad"
    }
   }
  },
