--- a/Test/SKU.ipynb
+++ b/Test/SKU.ipynb
@@ -56,6 +56,94 @@
     "import pyodbc\n",
     "pyodbc.drivers()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mDas Ausführen von Zellen mit „Python 3.11.0 64-bit“ erfordert das ipykernel-Paket.\n",
+      "\u001b[1;31mFühren Sie den folgenden Befehl aus, um „ipykernel“ in der Python-Umgebung zu installieren. \n",
+      "\u001b[1;31mBefehl: „/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall“"
+     ]
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from typing import Dict, Any, Iterable\n",
+    "from pandas import DataFrame\n",
+    "from sqlalchemy import create_engine, inspect\n",
+    "import urllib\n",
+    "\n",
+    "import pyodbc\n",
+    "\n",
+    "\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class ConnectionSettings:\n",
+    "    \"\"\"Connection Settings.\"\"\"\n",
+    "    server: str\n",
+    "    database: str\n",
+    "    username: str\n",
+    "    password: str\n",
+    "    #driver: str = '{ODBC Driver 18 for SQL Server}'\n",
+    "    #driver: str = '{ODBC Driver 13 for SQL Server}'\n",
+    "    driver: str = '{ODBC Driver 18 for SQL Server}'\n",
+    "    timeout: int = 30\n",
+    "class AzureDbConnection:\n",
+    "    \"\"\"\n",
+    "    Azure SQL database connection.\n",
+    "    \"\"\"\n",
+    "    def __init__(self, conn_settings: ConnectionSettings, echo: bool = False) -> None:\n",
+    "        conn_params = urllib.parse.quote_plus(\n",
+    "            'Driver=%s;' % conn_settings.driver +\n",
+    "            'Server=tcp:%s.database.windows.net,1433;' % conn_settings.server +\n",
+    "            'Database=%s;' % conn_settings.database +\n",
+    "            'Uid=%s;' % conn_settings.username +\n",
+    "            'Pwd=%s;' % conn_settings.password +\n",
+    "            'Encrypt=yes;' +\n",
+    "            'TrustServerCertificate=no;' +\n",
+    "            'Connection Timeout=%s;' % conn_settings.timeout\n",
+    "        )\n",
+    "        conn_string = f'mssql+pyodbc:///?odbc_connect={conn_params}'\n",
+    "        self.db = create_engine(conn_string, echo=echo)\n",
+    "    def connect(self) -> None:\n",
+    "        \"\"\"Estimate connection.\"\"\"\n",
+    "        self.conn = self.db.connect()\n",
+    "    def get_tables(self) -> Iterable[str]:\n",
+    "        \"\"\"Get list of tables.\"\"\"\n",
+    "        inspector = inspect(self.db)\n",
+    "        return [t for t in inspector.get_table_names()]\n",
+    "    def dispose(self) -> None:\n",
+    "        \"\"\"Dispose opened connections.\"\"\"\n",
+    "        self.conn.close()\n",
+    "        self.db.dispose()\n",
+    "conn_settings = ConnectionSettings(\n",
+    "    #server='batsql-pd-ne-cmes-dev-10.database.windows.net',\n",
+    "    server='batsql-pd-ne-cmes-dev-10',\n",
+    "    database='batsdb-pd-ne-dev-reporting_SuperDepot',\n",
+    "    username='batedp-cmes-dev-reportinguser',\n",
+    "    password='b2.5v^H!IKjetuXMVNvW')\n",
+    "\n",
+    "\n",
+    "\n",
+    "db_conn = AzureDbConnection(conn_settings)\n",
+    "db_conn.connect()\n",
+    "try:\n",
+    "    for t in db_conn.get_tables():\n",
+    "        print(t)\n",
+    "    # Do another DB-related stuff:\n",
+    "    # ...\n",
+    "finally:\n",
+    "    db_conn.dispose()\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
